tests/neg/cannot-reduce-inline-match.check
-- Error: tests/neg/cannot-reduce-inline-match.scala:9:5 ---------------------------------------------------------------
9 |  foo("f") // error
  |  ^^^^^^^^
  |  cannot reduce inline match with
  |   scrutinee:  "f" : ("f" : String)
  |   patterns :  case _:Int
  |---------------------------------------------------------------------------------------------------------------------
  |Inline stack trace
  |·····················································································································
  |This location contains code that was inlined from cannot-reduce-inline-match.scala:3
3 |    inline x match {
  |           ^
4 |      case _: Int =>
5 |    }
  ·---------------------------------------------------------------------------------------------------------------------
